kubernetes/gke-utility/argocd/argocd-app-controller-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          volumeMounts:
            - mountPath: /var/run/secrets/aws-iam-token/serviceaccount
              name: aws-iam-token
              readOnly: true
            - name: azure-token
              mountPath: /var/run/secrets/azure-token/serviceaccount
              readOnly: true
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1000m
      volumes:
        # AWS IAM token needed to assume role to access the EKS clusters.
        - name: aws-iam-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  audience: sts.amazonaws.com
                  expirationSeconds: 86400
                  path: token
        - name: azure-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 86400
                  path: token
                  audience: api://AzureADTokenExchange
