kubernetes/gke-utility/argocd/argocd-server-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          volumeMounts:
            - mountPath: /var/run/secrets/aws-iam-token/serviceaccount
              name: aws-iam-token
              readOnly: true
      volumes:
        # AWS IAM token needed to assume role to access the EKS clusters.
        - name: aws-iam-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  audience: sts.amazonaws.com
                  expirationSeconds: 86400
                  path: token
