kubernetes/gke-utility/argocd/extras.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  hostnames:
    - argo.k8s.io
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
      to:
        - operation:
            paths:
              - /api/badge
    - from:
        - source:
            namespaces:
              - istio-system
      when:
        - key: request.headers[X-Auth-Request-User]
          values:
            - ameukam
            - GenPage
            - hakman
            - iftachk
            - upodroid
            - xmudrii
